<resources>
    <string name="app_name">Neo Work</string>
    <string name="option_log_in">Log In</string>
    <string name="option_sign_up">Sign Up</string>
    <string name="option_open_profile">Open Profile</string>
    <string name="post_feed_label">Posts</string>
    <string name="event_feed_label">Events</string>
    <string name="users_label">Users</string>
    <string name="description_author_avatar">Author avatar</string>
    <string name="description_like">Like</string>
    <string name="description_share">Share</string>
    <string name="description_post_menu">Post menu</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="time_just_now">Just now</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Log In</string>
    <string name="suggest_auth_title">You must be logged in.</string>
    <string name="chooser_share_post">Share the post</string>
    <string name="error_load_more_posts">Something went wrong.</string>
    <string name="retry">Retry</string>
    <string name="no_posts">There are no posts yet.</string>
    <string name="error_loading">Something went wrong.</string>
    <string name="error_liking">Failed to toggle like.</string>
    <string name="error_deleting">Failed to delete.</string>
    <string name="add_post_description">Add post</string>
    <string name="error_empty_username">Username cannot be empty</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_unknown">Unknown error</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_login">Log In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="log_out_confirmation_message">Are you sure you want to log out?</string>
    <string name="log_out_confirmation_title">Log out</string>
    <string name="option_log_out">Log out</string>
    <string name="delete_post_confirmation_title">Confirmation</string>
    <string name="delete_confirmation_message">Are you sure you want to delete it?</string>
    <string name="delete">Delete</string>
    <string name="new_posts">New posts (%1$d)</string>
    <string name="edit_comment">Edit</string>
    <string name="title_post">Post</string>
    <string name="copy_comment">Copy comment</string>
    <string name="comment_copied">Comment copied to your clipboard</string>
    <string name="delete_comment">Delete</string>
    <string name="work_period">%1$s – %2$s</string>
    <string name="link_log_in">Log in</string>
    <string name="link_sign_up">Sign up</string>
    <string name="comment_input_not_authenticated">Log in or sign up to post comments.</string>
    <string name="comment">Comment</string>
    <string name="send_comment">Send comment</string>
    <string name="error_loading_post">Something went wrong. Unable to load the post.</string>
    <string name="error_loading_comments">Something went wrong. Unable to load comments.</string>
    <string name="error_liking_comment">Something went wrong. Failed to toggle like.</string>
    <string name="error_sending_comment">Something went wrong. Failed to send the comment.</string>
    <string name="error_deleting_comment">Something went wrong. Failed to delete the comment.</string>
    <string name="likers">Likers</string>
    <string name="menu_share">Share</string>
    <string name="content_description_back">Back</string>
    <string name="hint_post_edit">Write a post…</string>
    <string name="hint_comment_edit">Write a comment…</string>
    <string name="menu_save">Save</string>
    <string name="take_picture">Take a picture</string>
    <string name="attach_media">Attach media file</string>
    <string name="add_mentions">Add mentions</string>
    <string name="add_location">Add location</string>
    <string name="content_description_choose_event_time">Choose event time</string>
    <string name="cancel_edit_title">Are you sure?</string>
    <string name="cancel_edit_message">All changes will be lost.</string>
    <string name="dont_save">Don\'t save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="error_saving">An error occurred during saving</string>
    <string name="error_saving_post">An error occurred while saving the post</string>
    <string name="error_saving_comment">An error occurred while saving the comment</string>
    <string name="hint_edit">Write…</string>
    <string name="content_description_attached_photo">Attached photo</string>
    <string name="no_users">There are no users.</string>
    <string name="user_list_label">Users</string>
    <string name="open_to_work">Open to work</string>
    <string name="error_username_taken">The username is already taken</string>
    <string name="error_loading_user">Something went wrong. Failed to load the user.</string>
    <string name="description_user_avatar">User avatar</string>
    <string name="title_user">User</string>
    <string name="tab_wall">Wall</string>
    <string name="tab_jobs">Jobs</string>
    <string name="content_description_add_job">Add job</string>
    <string name="no_jobs">This user has not added any place of work.</string>
    <string name="no_user_posts">This user has not posted anything yet.</string>
    <string name="you">You</string>
    <string name="present">Present</string>
    <string name="title_new_job">New job</string>
    <string name="hint_position">Position</string>
    <string name="hint_link">Link</string>
    <string name="start_and_end_dates">Start and end dates</string>
    <string name="description_back_to_job">Back to job</string>
    <string name="title_edit_job">Edit job</string>
    <string name="error_saving_job">Failed to save the job. Please, check your internet connection.</string>
    <string name="error_invalid_data">Please, check the data entered correctly.</string>
    <string name="period_of_work">Period of work</string>
    <string name="hint_start_date">Start date</string>
    <string name="hint_end_date">End date</string>
    <string name="ok">OK</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="error_empty_position">Position cannot be empty</string>
    <string name="error_invalid_link">Please, enter correct link</string>
    <string name="error_loading_users">Something went wrong. Please, try again later.</string>
    <string name="error_connection">Please check your internet connection.</string>
    <string name="error_deleting_job">Failed to delete the job</string>
    <string name="content_description_play_video">Play video</string>
    <string name="title_user_chooser">Choose users</string>
    <string name="menu_accept">Accept</string>
    <string name="mentioned">Mentioned</string>
    <string name="error_invalid_username_or_password">Invalid username or password</string>
    <string name="location_permission_denied">You\'ve denied access to the location.\nYou won\'t be able to locate yourself on the map.</string>
    <string name="content_description_save_location">Save location</string>
    <string name="hint_address_search">Search here</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="loading">Loading…</string>
    <string name="location_address_unknown">Unknown address</string>
    <string name="error_suggest">Failed to find suggestions.</string>
    <string name="error_location_find_me">Failed to locate you.</string>
    <string name="content_description_find_me">Find me</string>
    <string name="content_description_add_event">Add event</string>
    <string name="no_events">There are no events yet.</string>
    <string name="description_participants">Participants</string>
    <string name="description_event_menu">Event menu</string>
    <string name="event_type_offline">Offline</string>
    <string name="event_type_online">Online</string>
    <string name="chooser_share_event">Share the event</string>
    <string name="hint_event_edit">Describe the event…</string>
    <string name="error_saving_event">An error occurred while saving the event</string>
    <string name="error_participating">Failed to toggle participation status.</string>
    <string name="event_type_label">Type</string>
    <string name="hint_date">Date</string>
    <string name="event_date">Event date</string>
    <string name="next">Next</string>
    <string name="select_event_date">Select event date</string>
    <string name="select_event_time">Select event time</string>
    <string name="error_invalid_datetime">Invalid date and time format</string>
    <string name="title_event">Event</string>
    <string name="participants">Participants</string>
    <string name="error_loading_event">Something went wrong. Failed to load the event.</string>
    <string name="speakers">Speakers</string>
    <string name="do_not_participate">Don\'t participate</string>
    <string name="participate">Participate</string>
    <string name="description_job_menu">Job menu</string>
    <string name="audio_unknown">Unknown</string>
    <string name="audio_unknown_artist">Unknown artist</string>
    <string name="audio_untitled">Untitled</string>
    <string name="audio_title" translatable="false">%1$s — %2$s"</string>
</resources>
