<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/take_picture"
        android:icon="@drawable/ic_camera"
        android:title="@string/take_picture"
        app:showAsAction="always" />
    <item
        android:id="@+id/attach_media"
        android:icon="@drawable/ic_attach"
        android:title="@string/attach_media"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_mentions"
        android:icon="@drawable/ic_people"
        android:title="@string/add_mentions"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_location"
        android:icon="@drawable/ic_place"
        android:title="@string/add_location"
        app:showAsAction="always" />
</menu>