<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/unauthenticated">
        <item
            android:id="@+id/log_in"
            android:title="@string/option_log_in"
            app:showAsAction="never" />
        <item
            android:id="@+id/sign_up"
            android:title="@string/option_sign_up"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/authenticated"
        android:visible="false">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_account"
            android:title="@string/option_open_profile"
            app:showAsAction="ifRoom" />
    </group>
</menu>
