<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:hint="@string/hint_date"
        app:endIconDrawable="@drawable/ic_event_time"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/drag_handle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            tools:text="05.11.2023 15:00" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:checkedButton="@+id/radio_button_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_text_field">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_type_label"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

        <RadioButton
            android:id="@+id/radio_button_online"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/event_type_online" />

        <RadioButton
            android:id="@+id/radio_button_offline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/event_type_offline" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
